test/error/StThrowNonString.ci
public static class Test
{
	public static bool Run()
	{
		throw new Test(); //ERROR: The argument of 'throw' must be a string
	}
}
